
Name:                bv
Version:             0.4.0
Synopsis:            Bit-vector arithmetic library
Description:         Bit-vectors implemented as a thin wrapper over integers.
Homepage:            http://bitbucket.org/iago/bv-haskell
Bug-reports:         http://bitbucket.org/iago/bv-haskell/issues
License:             BSD3
License-file:        LICENSE
Author:              Iago Abal <mail@iagoabal.eu>
Maintainer:          Iago Abal <mail@iagoabal.eu>
Copyright:           2012-2015 Iago Abal
Category:            Data, Bit Vectors
Build-type:          Simple
Cabal-version:       >=1.6

source-repository head
  type:     mercurial
  location: https://bitbucket.org/iago/bv-haskell

Flag test
     Description: Build the test suite, including an executable to run it.
     Default: False
     Manual: True

Library
  Exposed-modules:     Data.BitVector
  -- Other-modules:
  Hs-Source-Dirs:      src
  ghc-options:         -Wall -O2
  Extensions:          CPP
  Other-Extensions:    BangPatterns, DeriveDataTypeable
  Build-depends:       base >=4.6 && <5, integer-gmp, ghc-prim

Executable bv-tester
  if flag(test)
    Buildable:           True
    Build-depends:       base >=4.6 && <5,
                         QuickCheck >=2.4 && < 2.7,
                         test-framework-quickcheck2 ==0.3.*,
                         test-framework-th ==0.2.*
  else
    Buildable:           False

  Main-Is:             Properties.hs
  Hs-Source-Dirs:      src, test
  ghc-options:         -Wall
  Extensions:          CPP
  Other-Extensions:    BangPatterns, DeriveDataTypeable

